# meta

./: CMakeLists.txt  format.sh
cmake/: AddMetaTest.cmake
include/meta/: CMakeLists.txt  list.hpp  meta.hpp  operations.hpp  traits.hpp  tuple.hpp
tests/: CMakeLists.txt  demangle.cpp  demangle.hpp  helper.cpp  helper.hpp  list_tests.cpp  operations_tests.cpp  test_lists.hpp  test_operations.hpp  tuple_tests.cpp
